debut de resolution de l'exo c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CodingBattle)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(CodingBattle main.cpp)
+add_executable(CodingBattle main.cpp b_the_parrots.cpp c_sea_storm.cpp b_the_parrots.h c_sea_storm.h)
